[package]
name = "mokabench"
version = "0.9.0"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["moka-v011"]

# Cache implementations
moka-v011 = ["dep:moka011"]
moka-v010 = ["dep:moka010"]
moka-v09 = ["dep:moka09"]
moka-v08 = ["dep:moka08"]
hashlink = ["dep:hashlink"]
mini-moka = ["dep:mini-moka"]
quick_cache = ["dep:quick_cache"]
stretto = ["dep:stretto"]

# Metrics support
metrics = ["dep:crossbeam-epoch", "dep:metrics", "dep:metrics-exporter-dogstatsd", "dep:once_cell", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
anyhow = "1.0.56"
async-io = "1.12.0"
async-trait = "0.1.64"
clap = "3.2.23"
crossbeam-channel = "0.5.6"
futures-util = "0.3.26"
itertools = "0.10.5"
parking_lot = "0.12.1"
thiserror = "1.0.38"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

# Async Runtime
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros" ] }

# Cache implementations
hashlink = { optional = true, version = "0.8.1" }
mini-moka = { optional = true, version = "0.10.0" }
quick_cache = { optional = true, version = "0.2.1" }
stretto = { optional = true, version = "0.7.1" }

# Metrics support
crossbeam-epoch = { optional = true, version = "0.9.14" }
metrics = { optional = true, version = "0.21.0" }
metrics-exporter-dogstatsd = { optional = true, version = "0.8.0" }
once_cell = { optional = true, version = "1.17.1" }
tracing = { optional = true, version = "0.1.37" }
tracing-subscriber = { optional = true, version = "0.3.16" }
arc-swap = "1.6.0"

[dependencies.moka011]
package = "moka"
optional = true
# version = "0.11.3"
git = "https://github.com/moka-rs/moka"
branch = "cache-stats-v0.11"
# path = "../moka"
features = ["future"]

[dependencies.moka010]
package = "moka"
optional = true
version = "0.10.2"
features = ["future"]

[dependencies.moka09]
package = "moka"
optional = true
version = "0.9.7"
features = ["future", "dash"]

[dependencies.moka08]
package = "moka"
optional = true
version = "0.8.6"
features = ["future", "dash"]

# [profile.release]
# debug=true
# debug-assertions=true
# overflow-checks = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"
tikv-jemalloc-ctl = "0.5.0"
